[tool.poetry]
name = "chickenpy"
version = "0.1.0"
description = "A Python implementation of the Chicken esoteric programming language"
license="MIT"
authors = ["kosayoda <kieransiek@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
