[tool.poetry]
name = "chickenpy"
version = "0.1.0"
description = "A Python implementation of the Chicken esoteric programming language"
license = "MIT"
authors = ["kosayoda <kieransiek@protonmail.com>"]
repository = "https://github.com/kosayoda/chickenpy"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
chickenpy = "chickenpy.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
